Pluto, expanded Mars, Saturn, Jupiter

--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -37,7 +37,7 @@ link: dwarf-planet
                     Pluto was discovered in 1930 by Clyde Tombaugh.
                     It was considered the ninth planet in our solar system.
                     After the discovery of other bodies beyond Neptune like Eris, the number of planets, if they were recognised as such, could have been as high as a few hundred.
-                    For that reason, Pluto was re-classified as a dwarf planet in 2006.
+                    For that reason, Pluto was reclassified as a dwarf planet in 2006.
                     Eris itself was discovered in 2005 by a team of astronomers lead by Mike Brown, Chad Trujillo and David Rabinowitz at the Palomar Observatory.
                     It is the largest known dwarf planet by mass and at the time of discovery was also thought to be larger in size than Pluto.
                 </p>
@@ -191,7 +191,7 @@ link: dwarf-planet
                     <p class="paragraph">
                         Pluto is the biggest dwarf planet and TNO in the Solar System. 
                         It is named after the Greek god of the underworld, also known as Hades. 
-                        After it's discovery, Pluto was considered to be a planet, until 2006, when the IAU categorised it as a dwarf planet.
+                        After it's discovery, Pluto was considered to be a planet, until 2006, when the IAU recategorized it as a dwarf planet.
                         It is composed of mostly nitrogen ice and rock.
                         Pluto has five <a href="natural-satellite.html">satellites</a>. 
                         The biggest moon - <a href="charon.html">Charon</a>, named after the ferryman of Hades, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
