--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -99,7 +99,7 @@ link: jupiter
                     These rings appear to be made of dust, similar to the rings of <a href="neptune.html">Neptune</a>.
                     The main ring is created by the satellites Metis and Adrastea, while the outer ones are shaped by Amalthea and Thebe.
                 </p>
-                <h2 class="paragraphheader" id="Moons">Moons</h2>
+                <h2 class="paragraphheader" id="Satellites">Satellites</h2>
                 <p class="readmore">Main article: <a href="satellites-of-jupiter.html">Satellites of Jupiter</a></p>
                 <p class="paragraph">
                     Jupiter has four gravitationally rounded <a href="natural-satellite.html">moons</a> - Ganymede, Callisto, Io and Europa. 
@@ -174,6 +174,12 @@ link: jupiter
                         The orbiter Europa Clipper by NASA that was launched in 2024 is planned to study the Europan surface.
                     </p>
                 </div>
+                <h3 class="paragraphsubheader" id="InnerMoons">Inner moons</h3>
+                <p class="paragraph">
+                    There are four satellites that orbit closer to Jupiter than Io - Metis, Adrastea, Amalthea, and Thebe.
+                    They have regular orbits, that are prograde and have a low eccentricity and inclination, just like the Galilean moons.
+                    Metis and Adrastea maintain Jupiter's main ring, whereas Amalthea and Thebe maintain their own faint outer rings.
+                </p>
                 <h2 class="paragraphheader" id="Trojans">Trojans</h2>
                 <p class="paragraph">
                     A large group of <a href="asteroid.html">asteroids</a> co-orbits with Jupiter, named trojans.
