--- a/pages/mars.html
+++ b/pages/mars.html
@@ -51,6 +51,19 @@ link: mars
                     The martian solar day (called sol) is 24 hours, 39 minutes, and 35.244 seconds.
                     The axial tilt is 25.19°, which is close to that of Earth and thus has similar seasons.
                 </p>
+                <h2 class="paragraphheader" id="NaturalHistory">Natural history</h2>
+                <p class="paragraph">
+                    Mars, like the other planets in our solar system, formed approximately 4.6 billion years ago from the solar nebula - a rotating disk of gas and dust surrounding the Sun.
+                    As material in this disk collided and consolidated, Mars gradually accreted into a planet, developing it's differentiated internal structure.
+                    During its early history, known as the Noachian Period (about 4.1 to 3.7 billion years ago), Mars was a much warmer and wetter world, with a thicker atmosphere that allowed liquid water to flow across its surface, carving out river valleys, lake beds, and possibly even a vast ocean in the northern lowlands.
+                    This era also saw intense volcanic activity, which shaped massive features like the Tharsis region.
+                    The oldest surviving surfaces from that period are heavily cratered.
+                    Over time, however, Mars lost much of its atmosphere due to solar wind stripping and the cessation of its global magnetic field, leading to a dramatic climate shift.
+                    By the Hesperian Period (3.7 to 3.0 billion years ago), the planet became colder and drier, though volcanic activity and sporadic water flow persisted.
+                    This period was also marked by the formation of lava plains.
+                    In the Amazonian Period (3.0 billion years ago to present), Mars evolved into the cold, arid desert we observe today, with water mostly locked away as ice or buried underground, and only occasional geological activity reshaping its surface.
+                    This period exposed the North Polar Basin to impacts, which explains the scarcity of craters there.
+                </p>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
                 <p class="paragraph">
@@ -87,9 +100,10 @@ link: mars
                         There are two major volcanic regions - Tharsis and Elysium.
                         Tharsis is a region, containing most of the volcanoes on Mars.
                         Tharsis Montes, a group of three mountains - Ascraeus Mons, Pavonis Mons and Arsia Mons - is located in the center of Tharsis.
-                        Other prominent mountains are Alba Mons and Olympus Mons, which is the highest mountain known at 21,229 m above datum.
+                        Other prominent mountains are Alba Mons and Olympus Mons, which is the highest mountain known at 21,229 m above datum (<a href="vesta.html">Vesta</a>'s Rheasilvia might be taller, but the shape of the <a href="asteroid.html">asteroid</a> makes it hard to give an accurate elevation).
                         Elysium is located west of Tharsis, both separated by Amazonis Planitia.
-                        The tallest mountain is Elysium Mons at 14.1 km above the datum.
+                        The tallest mountain there is Elysium Mons at 14.1 km above the datum.
+                        Other volcanoes in Elysium include Albor and Hecates Tholus.
                     </p>
                     <p class="paragraph">
                         Valles Marineris, named after Mariner 9, is a canyon east from Tharsis.
@@ -102,8 +116,13 @@ link: mars
                         The Martian surface is heavily cratered, but most craters are located in the south.
                         The north contains interconnected low-lying plains like Arcadia Planitia, Acidalia Planitia and Utopia Planitia.
                         This suggests that these plains may have once been covered by a large Martian ocean.
+                    </p>
+                    <p class="paragraph">
                         Another big plain is Hellas Planitia, which is not connected to the other and is located in the south hemisphere.
-                        This is where the lowest point on Mars is.
+                        This is where the lowest point on Mars is - Badwater Crater.
+                        It is the largest impact crater on Mars, although the much larger Northern Polar Basin is suspected to also be one.
+                        It is roughly antipodal to Alba Mons, either a coincidence, or the impact was the cause of the volcanic activity on the opposite side of the planet.
+                        Other impact basins include Argyre Planitia, an antipode of Elysium, and Isidis Planitia, which is connected to Utopia Planitia and is antipodal to the Tharsis Montes.
                     </p>
                     <p class="paragraph">
                         Dark spots on Mars like Syrtis Major are albedo features significantly darker than the surrounding terrain.
@@ -176,51 +195,69 @@ link: mars
                     Schiaparelli gave names to most of those features, many still in use.
                     One feature he noticed was channels on the martian surface.
                     Until early 20th century it was believed that those channels were real, but with the improvement of telescopes, these features couldn't be seen.
-                    The channels were identified as an optical illusions.
+                    The channels were identified as an optical illusion.
                 </p>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
                     Many missions were conducted, including flybys, orbiters, landers, rovers and even a helicopter.
+                    The next milestones include sample return and crewed missions.
+                </p>
+                <h3 class="paragraphheader" id="SpaceRace">Space race</h3>
+                <p class="paragraph">
                     The Soviet Union were the first with a program to Mars.
                     NASA's Mariner 4 completed the first successful flyby, although the soviet Mars 1 lost communication before it's flyby.
+                    It also transmitted back to Earth the first images from another planet and disproving early theories about the Martian surface.
                     Mariner 9 was the first to orbit Mars, two weeks before the soviet Mars 2.
                     Mars 2 was successful at deploying an orbiter, but lander and rover crashed into the martian surface.
-                    The next Mars mission was the first to make a soft land, but shortly after lost communication.
+                    The next Mars mission was the first to make a soft land, but lost communication shortly after.
                     NASA's Viking 1 on the other hand landed and was operational for 2245 sols.
                 </p>
                 <p class="paragraph">
                     The last Soviet missions were the unsuccessful Phobos 1 and 2 missions.
                     Phobos 2 managed to reach a Phobos orbit, before it lost communications and failed to deploy a lander and a rover.
                 </p>
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:322px">
+                        <img class="articleimage" src="../assets/images/spacecrafts/perseverance-ingenuity.gif" alt="Perseverance and Ingenuity" width="320" height="180">
+                        <p class="caption">Mars 2020 mission - the rover Perseverance and the helicopter Ingenuity</p>
+                    </div>
+                    <h3 class="paragraphheader" id="AfterTheColdWar">After the Cold War</h3>
+                    <p class="paragraph">
+                        NASA continued with the missions, launching Mars Global Surveyor in 1996 to collect data about the atmosphere and the surface.
+                        Later that year, Mars Pathfinder was launched, which carried the rover Sojourner.
+                        It was the first rover to operate on Mars.
+                        Since then, NASA has sent four other rovers - Spirit, Opportunity, Curiosity and Perseverance.
+                        The Mars 2020 mission, along with Perseverance, brough Ingenuity - a small robotic helicopter, which operated the first flight on Mars.
+                        Other NASA missions include Mars Odyssey, which is still in operation orbiting Mars; MRO; Phoenix; MAVEN, and InSight, which studied various aspects like the geology, hydrology and atmosphere.
+                    </p>
+                    <p class="paragraph">
+                        Since the fall of the Soviet Union, other agencies launched their own missions over the years.
+                        Rosaviacosmos, later Roskosmos, launched two missions - Mars 96 and Phobos-Grunt, both unsuccessful.
+                        The Japanese ISAS failed to send their Mars orbiter Nozomi.
+                        ESA has two collaborative missions, both still in operation - Mars Express and ExoMars 2016 (in collaboration with Roskosmos).
+                        The probe Rosetta used Mars gravity assist as a way to reach the <a href="comet.html">comet</a> 67P/Churyumov–Gerasimenko.
+                        The Chinese CNSA has one mission (apart from the unsuccessful Yinghuo 1 that was part of Phobos-Grunt) to Mars - Tianwen-1.
+                        This way China became the second to operate a rover on Mars with Zhurong.
+                        ISRO - India's national space agency - was the fourth agency to send a spacecraft to Mars after NASA, the soviet space program and ESA.
+                        The Mars orbiter Mangalyaan has the lowest cost of all the missions to Mars.
+                        The Dubai-based MBRSC has one orbiter around Mars - Hope.
+                    </p>
+                </div>
+                <h3 class="paragraphheader" id="FutureMissions">Future missions</h3>
                 <p class="paragraph">
-                    NASA continued with the missions, launching Mars Pathfinder, which carried the rover Sojourner.
-                    It was the first rover to operate on Mars.
-                    Since then, NASA has sent four other rovers - Spirit, Opportunity, Curiosity and Perseverance.
-                    The Mars 2020 mission, along with Perseverance, brough Ingenuity - a small robotic helicopter, which operated the first flight on Mars.
-                </p>
-                <p class="paragraph">
-                    Since the fall of the Soviet Union, other agencies launched their own missions over the years.
-                    Rosaviacosmos, later Roskosmos, launched two missions - Mars 96 and Phobos-Grunt, both unsuccessful.
-                    The Japanese ISAS failed to send their Mars orbiter Nozomi.
-                    ESA has two missions, both still in operation - Mars Express and ExoMars 2016.
-                    The probe Rosetta used Mars gravity assist as a way to reach the <a href="comet.html">comet</a> 67P/Churyumov–Gerasimenko.
-                    The Chinese CNSA has one mission (apart from the unsuccessful Yinghuo 1 that was part of Phobos Grunt) to Mars - Tianwen-1.
-                    This way China became the second to operate a rover on Mars with Zhurong.
-                    ISRO - India's national space agency - was the fourth agency to send a spacecraft to MARS after NASA, the soviet space program and ESA.
-                    The Mars orbiter Mangalyaan has the lowest cost of all the missions to Mars.
-                    The Dubai-based MBRSC has one orbiter around Mars - Hope.
+                    Future missions include JAXA's Martian Moons eXploration - a Phobos and Deimos sample return mission, NASA's low-cost EscaPADE orbiters, CNSA's Tianwen-3 - a Mars sample return mission, ESA's Rosalind Franklin rover, and ISRO's Mangalayaan-2 orbiter, lander, and rover.
                 </p>
                 <h2 class="paragraphheader" id="HabitabilityAndColonisation">Habitability and colonisation</h2>
                 <p class="paragraph">
                     Mars does not have life forms, but might have done in the past.
                     Current missions of NASA are studying the surface for signs of life on Mars.
-                    The next ExoMars mission by ESA (in collaboration with Roscosmos) is planned to deploy the Rosalind Franklin rover, with the primary objetive to drill and collect samples for analysis.
-                    The mission was postponed due to Russia's ongoing invasion of Ukraine.
+                    The next ExoMars mission by ESA (originally planned as a collaboration with Roscosmos) is planned to deploy the Rosalind Franklin rover, with the primary objetive to drill and collect samples for analysis.
+                    The mission was postponed due to worsening relations due to Russia's ongoing invasion of Ukraine.
                 </p>
                 <p class="paragraph">
                     Plans for colonising Mars were proposed multiple times.
                     NASA and CNSA both plan on sending people on Mars as early as the 2030s.
-                    SpaceX, a privately held company, has proposed it's own missions to Mars with the intent of colonising and settling the <a href="planet.html">planet</a>.
+                    SpaceX, a privately held company, has proposed it's own missions to Mars with the intent of colonising and settling the planet.
                 </p>
                 <h2 id="ExternalLinks">External links</h4>
                 <ul>
