--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -20,7 +20,7 @@ link: neptune
                         The unexplained deviations from the expected orbit of Uranus lead to speculations about the existence of an eight planet.
                         Thus Neptune was discovered in 1846 by Johann Galle. 
                         It is not visible to the naked eye and was discovered by mathematical predictions. 
-                        The biggest Neptunian satellite - <a href="triton.html">Triton</a> was found shortly after and the other 13 we know of today were located until the next century.
+                        The biggest Neptunian satellite - <a href="triton.html">Triton</a> was found shortly after and the 15 other were not yet discovered until the next century, starting with Nereid.
                         Neptune has been visited by Voyager 2 in 1989.
                     </p>
                     <p class="paragraph">
