--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -103,7 +103,7 @@ link: saturn
                         Other minor outer rings are named after satellites orbiting them.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Moons">Moons</h2>
+                <h2 class="paragraphheader" id="Satellites">Satellites</h2>
                 <p class="readmore">Main article: <a href="satellites-of-saturn.html">Satellites of Saturn</a></p>
                 <p class="paragraph">
                     There are 274 <a href="natural-satellite.html">moons</a> known to orbit Saturn. 
@@ -115,12 +115,8 @@ link: saturn
                 </p>
                 <p class="paragraph">
                     Out of the irregularly-shaped satellite, Hyperion is the largest. 
-                    There are satellites like Atlas, Pan and Daphnis that are refered to as shepherd moons.
+                    There are satellites like Pan and Daphnis that are refered to as shepherd moons.
                     They have distinct equatorial ridges formed from clearing Saturn's rings.
-                </p>
-                <p class="paragraph">
-                    The remaining 250 are irregular and are split into Norse, Inuit, and Gallic groups. 
-                    The most massive irregularly-shaped satellite - Phoebe - is actually part of the Norse group, while it is named after a Greek Titaness. 
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right">
@@ -219,6 +215,25 @@ link: saturn
                         The moon resembles the fictional Death Star in Star Wars.
                     </p>
                 </div>
+                <h3 class="paragraphsubheader" id="OtherRegularMoons">Other regular moons</h3>
+                <p class="paragraph">
+                    There are 17 other regular moons of Saturn - their orbits are nearly circular and have low inclinations.
+                    The innermost moon (provisional name S/2009 S 1) is the smallest known Saturnian satellite and orbits near the B ring.
+                    The next eight moons - Pan, Daphnis, Atlas, Prometheus, Pandora, Epimetheus, Janus, and Aegaon are all within the orbit of Mimas.
+                    All but Atlas, Pandora, and Aegaon are shepherd moons, even though Atlas has an equatorial ridge.
+                    Between the orbits of Mimas and Enceladus orbit three more satellites - Methone, Anthe, and Pallene.
+                    The next two are trojans of Tethys - Telesto and Calypso, after which are the trojans of Dione - Helene and Polydeuces.
+                    The last one is Hyperion, outside the orbit of Titan.
+                    It is the largest of the non-round moons and is notable for its chaotic orbit and rotation and porous structure.
+                </p>
+                <h3 class="paragraphsubheader" id="OuterMoons">Outer moons</h3>
+                <p class="paragraph">
+                    The remaining 250 are irregular and are split into Norse, Inuit, and Gallic groups. 
+                    They are named after deities from the mythologies of each group's name.
+                    The Inuit group (36 satellites) and the Gallic group (17 satellites) have prograde orbits, while the Norse group (197 satellites) have retrograde orbits.
+                    The most massive irregularly-shaped satellite - Phoebe - is actually part of the Norse group, while it is named after a Greek Titaness. 
+                    Siarnaq, Albiorix, and Paaliq are the next largest outer moons.
+                </p>
                 <h2 class="paragraphheader" id="EarlyObservations">Early observations</h2>
                 <p class="paragraph">
                     Saturn is one of the planets known in ancient times.
