--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -23,8 +23,9 @@ link: uranus
                         The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                     </p>
                     <p class="paragraph">
-                        Voyager 2 is the only spacecraft that has visited Uranus.
+                        Voyager 2 is the only spacecraft that has visited Uranus so far.
                         Several proposals were made for missions to Uranus, but none are yet realised.
+                        One planned mission is the CNSA's Tianwen-4, which will visit the planet <a href="jupiter.html">Jupiter</a>, after which will head for Uranus.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Name">Name</h2>
